Fix: Restore LecturerService.java to valid class structure and correct getLecturers method
- Re-added missing @Service annotation and autowired dependencies.
- Correctly placed the getLecturers method within the service class.
- Improved in-memory status filtering logic within getLecturers method.